# MDBWrapper

./: LICENSE  README.md
binaries/apache-2.2.x/x86_64/: libmodmdbwrapper.la
binaries/apache-2.2.x/x86_64/.libs/: libmodmdbwrapper.lai  libmodmdbwrapper.so.0.0.0
binaries/apache-2.4.x/x86_64/.libs/: libmodmdbwrapper.dylib  libmodmdbwrapper.la
binaries/x86_64/: libmodmdbwrapper.la
binaries/x86_64/.libs/: libmodmdbwrapper.0.dylib  libmodmdbwrapper.lai
src/: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.in  configure.scan  mod_mdbwrapper.c
