# Required initializer
AC_INIT

# Automake initialization
AM_INIT_AUTOMAKE(mod_mdbwrapper, 1.0)

# Add a test for a compiler.
AC_PROG_CC
AM_PROG_LIBTOOL

# Define a macro that is used to parse a --with-apache parameter
# The macro is named "APACHE_DIR"
AC_DEFUN([APACHE_DIR],[

	AC_ARG_WITH(
		apache,
		[  --with-apache[=DIR]     Apache server directory],
		,
		[with_apache="no"]
	)

	AC_MSG_CHECKING(for Apache directory)

	if test "$with_apache" = "no"; then
		AC_MSG_ERROR( You need to specify the apache directory using --with-apache)
	else
		# make sure that a well known include file exists
		if test -e $with_apache/include/httpd.h; then
			apache_dir=$with_apache
			AC_MSG_RESULT(APACHE found!)
		else
			AC_MSG_ERROR( $with_apache not found.  Check the value you specified with --with-apache)
		fi
	fi

])

AC_DEFUN([JSONC_DIR],[

        AC_ARG_WITH(
                jsonc,
                [  --with-jsonc[=DIR]     JSON-C Source Directory],
                ,
                [with_jsonc="no"]
        )

        AC_MSG_CHECKING(for jsonc directory)

        if test "$with_jsonc" = "no"; then
                AC_MSG_ERROR( You need to specify the jsonc directory using --with-jsonc)
        else
                # make sure that a well known include file exists
                if test -e $with_jsonc/json.h; then
                        jsonc_dir=$with_jsonc
                        AC_MSG_RESULT(JSONC found!)
                else
                        AC_MSG_ERROR( $with_jsonc not found.  Check the value you specified with --with-jsonc)
                fi
        fi

])

AC_DEFUN([MONGOC_DIR],[

        AC_ARG_WITH(
                mongoc,
                [  --with-mongoc[=DIR]     mongoDB C Driver Source Directory],
                ,
                [with_mongoc="no"]
        )

        AC_MSG_CHECKING(for monogdb-c driver directory)

        if test "$with_mongoc" = "no"; then
                AC_MSG_ERROR( You need to specify the mongodb-c driver directory using --with-mongoc)
        else
                # make sure that a well known include file exists
                if test -e $with_mongoc/src/mongo.h; then
                        mongoc_dir=$with_mongoc
                        AC_MSG_RESULT(mongodb-c driver found!)
                else
                        AC_MSG_ERROR( $with_mongoc not found.  Check the value you specified with --with-mongoc)
                fi
        fi

])

AC_DEFUN([APR_DIR],[

        AC_ARG_WITH(
                apr,
                [  --with-apr[=DIR]    APR Include Directory],
                ,
                [with_apr="/usr/include/apr-1"]
        )

        AC_MSG_CHECKING(for apr include directory)

        # make sure that a well known include file exists
        if test -e $with_apr/apr.h; then
                apr_dir=$with_apr
                AC_MSG_RESULT(apr directory found!)
	elif test -e /usr/include/apr-1.0/apr.h; then
		apr_dir=/usr/include/apr-1.0
		AC_MSG_RESULT(apr directory found!)	
        else
                AC_MSG_ERROR( Could not find apr.h in the usual places (tried: $with_apr & /usr/include/apr-1.0)... Please specify a location with --with-apr)
        fi

])

# Now call macros that was just specified
APACHE_DIR
JSONC_DIR
MONGOC_DIR
APR_DIR

# Save the location of apache into the "apache_dir" variable.
# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(apache_dir)
AC_SUBST(jsonc_dir)
AC_SUBST(mongoc_dir)
AC_SUBST(apr_dir)

# Write config.status and the Makefile
AC_OUTPUT(Makefile)
